# 0xpads_listener

./: .gitignore  Dockerfile  Makefile  README.md  deploy.bash  docker-compose.yml  env.example  pyproject.toml  run.py  run.sh  start_listener.py
listener/: __init__.py  main.py
listener/application/: interfaces.py  use_cases.py
listener/application/services/: alert_service.py  chart_service.py  price_service.py
listener/config/: settings.py
listener/domain/: entities.py  events.py  value_objects.py
listener/infrastructure/blockchain/: blockchain_service.py  contract_abis.py
listener/infrastructure/logging/: logger_config.py
listener/infrastructure/redis/: redis_service.py
listener/infrastructure/repositories/: redis_repositories.py
listener/infrastructure/websocket/: websocket_service.py
